--- a/Real-World Phenomenon.ipynb
+++ b/Real-World Phenomenon.ipynb
@@ -1510,7 +1510,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "algorithm to analyse data"
+    "## Calculate Score from the Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the data collected, we are going to create a score for the 5 factors that affect athletes performance and find out which random individual should have the best performing athlete. \n",
+    "\n",
+    "1. Age : If age 26 get 100 points, less than 26 is 50 or greater than 26 75 points.\n",
+    "2. Alcohol : If False 100 points if true 0\n",
+    "3. Training Hours : If 6 hours 100 points anything else 50\n",
+    "4. Recovery Hours : if 9 hours 100 points anything else 50\n",
+    "5. Calories : If 3000 calories 100 points anything else 50\n",
+    "\n",
+    "Lets calculate the scores for the all athletes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-49ff7dd108b4>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-49ff7dd108b4>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    def age:\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Create a score for Age profile\n",
+    "def age:\n",
+    "    if age == 26:\n",
+    "        print(\"100\")\n",
+    "    elif age > 26:\n",
+    "        print(\"75\")\n",
+    "    else age < 26:\n",
+    "        print(\"50\")  "
    ]
   },
   {
@@ -1528,8 +1568,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Benefits in sport"
+    "## Summary"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
