--- a/Real-World Phenomenon.ipynb
+++ b/Real-World Phenomenon.ipynb
@@ -505,7 +505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Calories1.jpg\" Height='700', width='700' />"
+    "<img src=\"Calories.jpg\" Height='700', width='700'/>"
    ]
   },
   {
