Correction of errors

--- a/Real-World Phenomenon.ipynb
+++ b/Real-World Phenomenon.ipynb
@@ -2265,7 +2265,7 @@
     }
    ],
    "source": [
-    "# Create a score for Age profile\n",
+    "# Filter data set by age of 26\n",
     "filtered_data = df[(df.Age == 26)]\n",
     "filtered_data"
    ]
@@ -2361,7 +2361,7 @@
     }
    ],
    "source": [
-    "# Create a score for Age profile\n",
+    "# Filter data set by age of 26, training hours of 6 & recovery hours by greater than 8 hours\n",
     "filtered_data = df[(df.Age == 26) & (df.Train == 6) & (df.Recovery >= 8)]\n",
     "filtered_data"
    ]
@@ -2388,6 +2388,7 @@
     }
    ],
    "source": [
+    "# Find athlete 472 by using iloc\n",
     "df.iloc[472]"
    ]
   },
@@ -2409,9 +2410,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "[1] http://theconversation.com/how-does-aging-affect-athletic-performance-36051"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[1] https://www.irishexaminer.com/breakingnews/sport/gaa/10-statistics-that-will-cause-alarm-for-the-gaa-870028.html"
+    "[2] https://www.joefrielsblog.com/2017/01/how-important-is-training-volume.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[3] http://blog.isportsanalysis.com/what-sport-performance-analysis/"
    ]
   },
   {
@@ -2420,21 +2437,21 @@
     "collapsed": true
    },
    "source": [
-    "[2] http://theconversation.com/how-does-aging-affect-athletic-performance-36051"
+    "[4] http://www.askaboutalcohol.ie/health/sports-performance/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3] https://www.joefrielsblog.com/2017/01/how-important-is-training-volume.html"
+    "[5] https://believeperform.com/performance/overtraining-how-to-prevent-it/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[4] http://blog.isportsanalysis.com/what-sport-performance-analysis/"
+    "[6] https://drmichellecleere.com/blog/undertraining-and-overtraining/"
    ]
   },
   {
@@ -2443,21 +2460,7 @@
     "collapsed": true
    },
    "source": [
-    "[5] http://www.askaboutalcohol.ie/health/sports-performance/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[6] https://believeperform.com/performance/overtraining-how-to-prevent-it/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[7] https://drmichellecleere.com/blog/undertraining-and-overtraining/"
+    "[7] https://www.voanews.com/a/professional-athletes-prepare-for-life-after-sports-118377659/163130.html"
    ]
   },
   {
@@ -2466,7 +2469,21 @@
     "collapsed": true
    },
    "source": [
-    "[8] https://www.voanews.com/a/professional-athletes-prepare-for-life-after-sports-118377659/163130.html"
+    "[8] https://healthyeating.sfgate.com/caloric-needs-athletes-7179.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[9] https://www.npr.org/sections/thesalt/2012/07/24/157317262/how-many-calories-do-olympic-athletes-need-it-depends?t=1543683876145"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[10] https://www.verywellfit.com/the-benefits-of-rest-and-recovery-after-exercise-3120575"
    ]
   },
   {
@@ -2475,21 +2492,7 @@
     "collapsed": true
    },
    "source": [
-    "[9] https://healthyeating.sfgate.com/caloric-needs-athletes-7179.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[10] https://www.npr.org/sections/thesalt/2012/07/24/157317262/how-many-calories-do-olympic-athletes-need-it-depends?t=1543683876145"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[11] https://www.verywellfit.com/the-benefits-of-rest-and-recovery-after-exercise-3120575"
+    "[11] http://www.mastersathlete.com.au/2017/03/weve-proved-it-older-athletes-do-take-longer-to-recover/"
    ]
   },
   {
@@ -2498,7 +2501,7 @@
     "collapsed": true
    },
    "source": [
-    "[12] http://www.mastersathlete.com.au/2017/03/weve-proved-it-older-athletes-do-take-longer-to-recover/"
+    "[12] https://www.dataquest.io/blog/numpy-tutorial-python/"
    ]
   },
   {
@@ -2507,7 +2510,7 @@
     "collapsed": true
    },
    "source": [
-    "[13] https://www.dataquest.io/blog/numpy-tutorial-python/"
+    "[13] https://greatist.com/fitness/over-hill-have-you-passed-peak-performance"
    ]
   },
   {
@@ -2516,51 +2519,42 @@
     "collapsed": true
    },
    "source": [
-    "[14] https://greatist.com/fitness/over-hill-have-you-passed-peak-performance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "[15] http://time.com/5154982/age-requirement-olympics-2018/"
+    "[14] http://time.com/5154982/age-requirement-olympics-2018/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[16] \"Fatigue and underperformance in athletes: the overtraining syndrome\" by Richard Budgett (1998)"
+    "[15] \"Fatigue and underperformance in athletes: the overtraining syndrome\" by Richard Budgett (1998)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[17] https://theconversation.com/how-does-aging-affect-athletic-performance-36051"
+    "[16] https://theconversation.com/how-does-aging-affect-athletic-performance-36051"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[18] https://www.ncbi.nlm.nih.gov/pubmed/29345524"
+    "[17] https://www.ncbi.nlm.nih.gov/pubmed/29345524"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[19] https://www.gssiweb.org/sports-science-exchange/article/sse-120-recovery-techniques-for-athletes"
+    "[18] https://www.gssiweb.org/sports-science-exchange/article/sse-120-recovery-techniques-for-athletes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[20] https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3257708/#B54-nutrients-02-00781"
+    "[19] https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3257708/#B54-nutrients-02-00781"
    ]
   }
  ],
